feat: add linux command for run the code